--- a/static/login.css
+++ b/static/login.css
@@ -4,45 +4,30 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 a{
     text-decoration: none;
 
 }
-body{
+.page-login{
     height: 100vh;
+    display: flex;
     align-items: center;
     justify-content: center;
-    
+    font-family: "PeydaWeb SemBd"; 
     background-color: #f0f0f0;
 } 
 
 .container{
-    font-family: "PeydaWeb SemBd"; 
     transition: all 0.5s ease;
     position: relative;
     width: 460px;
     height: 640px;
     border-radius: 12px;
     padding: 20px 30px 120px;
-    background-color: #208447;
+    background-color: #303f9f;
     box-shadow: 0 5px 10px rgba(0, 0, 0,0.1);
     overflow: hidden;
 }
-
-.rcontainer{
-    z-index: 3;
-    transition: all 0.5s ease;
-    position: relative;
-    width: 460px;
-    height: 640px;
-    border-radius: 12px;
-    padding: 20px 30px 120px;
-    background-color: #87dea8;
-    box-shadow: 0 5px 10px rgba(0, 0, 0,0.1);
-    overflow: hidden;
-}
-
 .login-section{
     position: absolute;
     left: 50%;
@@ -78,7 +63,7 @@ opacity: 0.6;
 
 .social-buttons button{
     cursor: pointer;
-    width: 55%;
+    width: 100%;
     padding: 10px;
     background-color: #fff;
     border: none;
@@ -129,6 +114,8 @@ opacity: 0.6;
 }
 
 form input{
+    width: 400;
+    height: 40;
     outline: none;
     border: none;
     padding: 10px 15px;
@@ -159,10 +146,20 @@ form .btn{
     font-size: 18px;
     cursor: pointer;
 }
-.login-section .btn{
-    background-color: #208447;
+
+.singup-section .btn{
+    background-color: #455bf0;
     color: #fff;
     border: none;
 
 }
+
+.login-section .btn{
+    background-color: #303f9f;
+    color: #fff;
+    border: none;
+
+}
+
+
 
