--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,17 @@
 {% load static %}
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+     <title>
+        {% block title %} Fazenda a Venda {% endblock %}
+     </title>
+</head>
+
 <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}"/>
 <div class="wrapper">
   <header class="page-header">
     <nav>
-      <h2 class="logo">LOGO</h2>
+      <h2 onclick="homeredirect()" class="logo">LOGO</h2>
       <ul>
         <li>
           <a href="/about">Sobre Nós</a>
@@ -64,8 +72,5 @@
     </ul>
   </footer>
 </div>
-<script>
-  function loginredirect() {
-  window.location.href = "/login";
-  }
-  </script>
+<script>function loginredirect() { window.location.href = "/login";} </script>
+<script>function homeredirect() { window.location.href = "/";} </script>
