--- a/static/base.css
+++ b/static/base.css
@@ -87,6 +87,7 @@ body {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .page-main {
   display: flex;
+  align-items: center;
   flex-direction: column;
   justify-content: center;
   flex-grow: 1;
