--- a/templates/login.html
+++ b/templates/login.html
@@ -60,7 +60,7 @@
                 <input type="email" placeholder="Endereço de e-mail" name="lemail" required>
                 <input type="password" placeholder="Senha cadastrada" name="lpass" required>
                 <a href="/forget">Esqueceu sua senha?</a>
-                <button type="submit" class="btn">Login</button>
+                <button type="submit" class="btn">Entrar</button>
             </form>
 
         </div>
