--- a/templates/base.html
+++ b/templates/base.html
@@ -2,12 +2,20 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-     <title>
-        {% block title %} Fazenda a Venda {% endblock %}
-     </title>
+    <title>{% block title %} Fazenda a Venda {% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Bootstrap CSS-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}"/>
 </head>
 
-<link rel="stylesheet" type="text/css" href="{% static 'base.css' %}"/>
+<script>function loginredirect() { window.location.href = "/login";} </script>
+<script>function homeredirect() { window.location.href = "/";} </script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+
 <div class="wrapper">
   <header class="page-header">
     <nav>
@@ -31,15 +39,16 @@
 
   </header>
 
-  {% if messages %}
-    {% for message in messages %}
-
-      <div id="alertas" class="alert alert-{{ message.tags }}">
-        <strong>{{ message }}</strong>
-      </div>
-
+  {% for message in messages %}
+  <div class="container-fluid p-0">
+    <div class="alert {{ message.tags }} alert-dismissible" role="alert" >
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="True">&times;</span>
+      </button>
+      {{ message }}
+    </div>
+  </div>
   {% endfor %}
-{% endif %}
 
   <main class="page-main">
     {% block content %}
@@ -72,5 +81,3 @@
     </ul>
   </footer>
 </div>
-<script>function loginredirect() { window.location.href = "/login";} </script>
-<script>function homeredirect() { window.location.href = "/";} </script>
