--- a/templates/base.html
+++ b/templates/base.html
@@ -39,16 +39,7 @@
 
   </header>
 
-  {% for message in messages %}
-  <div class="container-fluid p-0">
-    <div class="alert {{ message.tags }} alert-dismissible" role="alert" >
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="True">&times;</span>
-      </button>
-      {{ message }}
-    </div>
-  </div>
-  {% endfor %}
+  {% include "message.html" %}
 
   <main class="page-main">
     {% block content %}
