feat: Novos sistemas de menesagem!

--- a/static/login.css
+++ b/static/login.css
@@ -9,7 +9,6 @@ a{
 
 }
 .page-login{
-    
     height: 640px;
     display: flex;
     align-items: center;
@@ -63,6 +62,7 @@ opacity: 0.6;
 
 .social-buttons button{
     cursor: pointer;
+    align-items: center;
     width: 100%;
     padding: 10px;
     background-color: #fff;
@@ -72,6 +72,11 @@ opacity: 0.6;
     display: flex;
     justify-content: center;
     gap: 6px;
+}
+
+.g-logo{
+    width: 20px;
+    height: 20px;
 }
 
 
