--- a/static/base.css
+++ b/static/base.css
@@ -155,7 +155,7 @@ body {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   body {
     font-size: 18px;
   }
