--- a/static/base.css
+++ b/static/base.css
@@ -42,15 +42,16 @@ body {
   min-height: 100vh;
 }
 
-.wrapper > * {
+/* .wrapper > * {
   padding: 20px;
-}
+} */
 
 
 /* HEADER
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .page-header {
   background: var(--main-white-color);
+  padding: 20px;
 }
 .page-header nav {
   display: flex;
@@ -127,6 +128,8 @@ body {
   display: flex;
   flex-direction: column-reverse;
   background: var(--main-white-color);
+  padding: 20px;
+  position: relative;
 }
 
 .page-footer ul {
