--- a/templates/home.html
+++ b/templates/home.html
@@ -5,5 +5,14 @@
 {% block content %}
 <link href="{% static 'home.css' %}" rel="stylesheet" type='text/css'>
 
+<link href="{% static 'slideimg.scss' %}" rel="stylesheet" type='img/css'>
+
+<div id="img">
+    <img class="bg-img" src="{% static 'fotoFazenda.png'%}" alt="fotoFazenda">
+</div>
+
+<h1 class="txt">Fazendas em destaque!</h1>
+
+{% include "carrosel.html" %}
 
 {% endblock content %}
