--- a/templates/terreno.html
+++ b/templates/terreno.html
@@ -17,24 +17,28 @@
         <div class="stats">
         <ul>
             <li>
+            <strong>
             <p class="heading">Estado</p>
-            <p class="footing">Goias</p>
+            <p class="footing">Goiás</p>
             </li>
             <li>
-            <p class="heading">Banheiros</p>
-            <p class="footing">4</p>
+            <p class="heading">Tamanho</p>
+            <p class="footing">340 m²</p>
             </li>
             <li>
             <p class="heading">Preço Total</p>
-            <p class="footing">18,231,987</p>
+            <p class="footing">R$ 1.500.000,00</p></strong>
             </li>
+        
         </ul>
-        <button>Fazer proposta</button>
+        
         </div>
+
+        <button>Fazer proposta</button>
     </div>
 
-    <div class="bg-img">
-        <img src="{{ img }}"  alt="" />
+    <div class="img-container">
+        <img class="bg-img" src="{{ img }}"  alt="" />
     </div>
 </div>
 
