--- a/static/terreno.css
+++ b/static/terreno.css
@@ -1,10 +1,44 @@
 .info{
+    padding: 20px;
+    width: 100%;
+    height: auto;
+    display: flex;
     color: black;
+    justify-content: space-between;
+
 }
 
 .info-card{
+    padding: 20px;
+    display: grid;
     background-color: aliceblue;
     width: 460px;
     height: 620px;
     border-radius: 20px;
+}
+
+.bg-img{
+    width: 1280px;
+    height: 720px;
+}
+
+.stats ul{
+    text-transform: uppercase;
+    font-size: medium;
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.info button{
+    font-size: larger;
+    border: none;
+    text-transform: uppercase;
+    background-color: darkgreen;
+    border-radius: 10px;
+    width: 100%;
+    height: 50%;
+    align-items: end;
 }
